--- a/src/App.css
+++ b/src/App.css
@@ -603,8 +603,49 @@ html {
   border-width: 0;
 }
 
+.absolute {
+  position: absolute;
+}
+
 .relative {
   position: relative;
+}
+
+.inset-x-0 {
+  left: 0px;
+  right: 0px;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
+.bottom-1 {
+  bottom: 0.25rem;
+}
+
+.bottom-2 {
+  bottom: 0.5rem;
+}
+
+.bottom-2\.5 {
+  bottom: 0.625rem;
+}
+
+.right-1 {
+  right: 0.25rem;
+}
+
+.right-2 {
+  right: 0.5rem;
 }
 
 .mx-auto {
@@ -633,6 +674,10 @@ html {
   height: 1.5rem;
 }
 
+.h-5 {
+  height: 1.25rem;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
@@ -645,8 +690,16 @@ html {
   width: 2.75rem;
 }
 
+.w-5 {
+  width: 1.25rem;
+}
+
 .max-w-md {
   max-width: 28rem;
+}
+
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .cursor-pointer {
@@ -710,6 +763,18 @@ html {
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
+.fill-slate-400 {
+  fill: #94a3b8;
+}
+
+.stroke-teal-300 {
+  stroke: #5eead4;
+}
+
+.stroke-slate-400 {
+  stroke: #94a3b8;
+}
+
 .p-5 {
   padding: 1.25rem;
 }
@@ -747,12 +812,12 @@ html {
   line-height: 1.75rem;
 }
 
-.font-normal {
-  font-weight: 400;
-}
-
 .font-semibold {
   font-weight: 600;
+}
+
+.font-normal {
+  font-weight: 400;
 }
 
 .uppercase {
@@ -876,6 +941,14 @@ html {
 .hover\:bg-teal-300:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(94 234 212 / var(--tw-bg-opacity));
+}
+
+.hover\:fill-teal-300:hover {
+  fill: #5eead4;
+}
+
+.hover\:stroke-teal-300:hover {
+  stroke: #5eead4;
 }
 
 .hover\:text-slate-800:hover {
